fix fullscreen overlap (fixes #2420)

--- a/src/app/shared/forms/planet-markdown-textbox.scss
+++ b/src/app/shared/forms/planet-markdown-textbox.scss
@@ -24,4 +24,14 @@ planet-markdown-textbox {
     height: 15vh;
     min-height: 15vh;
   }
+
+  .CodeMirror.CodeMirror-fullscreen {
+    margin-top: 10px;
+    margin-left: 70px;
+  }
+
+  .CodeMirror.CodeMirror-fullscreen .CodeMirror-scroll{
+    height: 100vh;
+    min-height: 100vh;
+  }
 }
